--- a/style/style.css
+++ b/style/style.css
@@ -114,8 +114,7 @@ header {
 
 .banner-inbox {
     /* padding-left: 20px; */ 
-    padding-top: 46px;
-
+    /* padding-top: 46px; */
     /* margin-top: -13px; */
 }
 .bg {
@@ -128,8 +127,8 @@ header {
 }
 
 .breadcrumbs {
-    padding-top: 0;
-    margin-top: 0;    
+    padding-left: 0;
+    margin-top: 0;  
     list-style-type: none;
     display: flex;
     justify-content: center;
@@ -158,7 +157,7 @@ header {
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 2px;
-    padding-bottom: 20px;
+    padding-bottom: 19px;
 }
 
 .description {
@@ -188,7 +187,7 @@ main {
     background-position: center center;
     background-repeat: no-repeat;    
     /* padding-bottom: 121px; убрал */
-    padding: 90px 100px
+    padding: 101px 100px 124px;
 }
 
 .sale {
@@ -213,26 +212,22 @@ main {
     font-size: 60px;    
     text-transform: uppercase;
     color: #FFFFFF;
-    /* padding-top: 60px;
-    padding-left: 100px;
-    padding-bottom: 0px; */
     margin-top: 0;
     margin-bottom: 0;
+    padding-bottom: 5px;
 }
 
 .banner-text {
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
     line-height: 1.6; /* 24px = 1.5 */
-    color: #FAF9F9;
-    margin-bottom: 8px;
-    /* margin-left: 101px; убрал*/
-    margin-bottom: 34px;
-    width: 328px;
+    color: #FAF9F9;    
+    max-width: 328px;
+    padding-bottom: 20px;
     
 }
 .banner-link {
-    padding: 18px 48px;
+    padding: 18px 24px;
     font-weight: 700;
     font-size: 14px;    
     text-align: center;
@@ -256,7 +251,7 @@ main {
 .menu-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 53px 20px;
+    gap: 50px 20px;
     
 }
 .menu-grid-cover {    
@@ -288,10 +283,20 @@ main {
     line-height: 56px;
     text-transform: uppercase;
     color: #1B2A49;
-    margin-bottom: 0;
-    
+    margin: 0;
+    padding: 33px 0;
+      
 }
-
+.menu-title-additionally {
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 56px;
+    text-transform: uppercase;
+    color: #1B2A49;
+    margin: 0;
+    padding-top: 100px;
+    padding-bottom: 35px;
+}
 .menu-select {
     padding: 13px 27px;
     border: 1px solid #DEDEDE;
@@ -325,9 +330,9 @@ main {
     /* line-height: 38px; */
     text-align: center;
     color: #1B2A49;
-    padding-top: 20px;
+    padding-top: 24px;
     padding-bottom: 0;
-    margin-top: 1px;    
+    margin-top: 0px;    
     margin-bottom: 0px;
     /* margin-top: 20px; */
     
@@ -339,8 +344,8 @@ main {
     /* line-height: 28px; */
     text-align: center;
     color: #979797;
-    padding-top: 11px;
-    padding-bottom: 24px;
+    padding-top: 9px;
+    padding-bottom: 3px;
     margin-bottom: 0;
     margin-top: 0;
 }
@@ -348,7 +353,7 @@ main {
 .menu-grid-btn {
     display: flex;
     margin: 19px auto 0;
-    padding: 7px 28px;
+    padding: 8px 28px;
     background: #FBB731;
     border-radius: 5px;
     cursor: pointer;
@@ -708,12 +713,6 @@ h1 span {
 }
 /*==== @media (min-width: 1349px) {} ================================================= */
 
-#bee {
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    
-}
 
 @media (max-width: 768px) {
     .header-nav a {       
