--- a/style/style.css
+++ b/style/style.css
@@ -925,6 +925,7 @@ h1 span {
     }    
     .container2 {
         max-width: 738px;
+        gap: 30px;
     }
     .container {
         max-width: 738px;
@@ -1064,29 +1065,37 @@ h1 span {
     }
     .title {
         font-size: 38px;
+        padding-bottom: 13px;
     }
     .breadcrumbs {
         font-size: 15px;
+        padding-bottom: 10px;
     }
     .description {
         font-size: 12px;
     }
     .bg {       
-        padding: 55px 0px 139px 0px;
+        padding: 55px 0 58px 0;
         margin-bottom: 33px;
+    }
+    .banner {
+        margin-top: 30px;
     }
     .menu-title {
         font-size: 27px;
+        padding: 23px 0;
     }
     .banner-box {        
-        background-position: 17% center;
-        padding: 35px 24px 54px;
-        /* padding-bottom: 121px; */
+        background-position: 6% center;
+        padding: 35px 24px 55px;
+    }
+    .banner-text {
+        padding-bottom: 42px;
     }
     .menu-select {
         font-size: 12px;
         flex-basis: 136px;
-        padding: 13px 24px 13px 15px;
+        padding: 13px 24px 13px 10px;
         background-position: 92% center;
     }
     .container2 {
@@ -1094,11 +1103,8 @@ h1 span {
         gap: 35px;
         flex-direction: column;
     }
-    .banner-box {
-        background-position: 0% center;
-    }    
     .menu {
-        margin-top: 40px;
+        margin-top: 26px;
         margin-bottom: 30px;
     }
     .additionally {
@@ -1135,6 +1141,21 @@ h1 span {
     .menu-grid-cover-2 {
         height: 56vw;
     }
+    .footer-list + .footer-list-tel {
+        display: none;
+    }
+    .footer {
+        position: relative;
+    }
+    .footer-tel {
+        display: block;
+        position: absolute;
+        right: 15px;
+        top: 55px;
+    }
+    .button-up.visible {
+        opacity: 0;
+    }
 }
 @media (max-width: 519px) {
 .bg {
@@ -1142,10 +1163,7 @@ h1 span {
     margin-bottom: 0;    
     }
 }
-@media (max-width: 408px), (max-width: 480px) {
-    .menu-grid-title {
-        font-size: 22px;
-    }
+@media (max-width: 480px) {
     .footer {
         position: relative;
     }
@@ -1449,152 +1467,144 @@ h1 span {
         line-height: 18px;
         margin-bottom: 0;
     }
-}
-    /* ---- menu.html ---- */
-    /* .header {
+
+    /* ---- menu.html ---- */   
+    .header {
         padding-top: 34px;
         padding-bottom: 19px;
-    }     */
-    /* .header-item {
+    }    
+    .header-item {
         flex-basis: 52%;
-    } */
-    
-/*     
+    }
     .menu {
         margin-top: 30px;
         margin-bottom: 0;
-    } */
-    /* .additionally .container {
+    }
+    .additionally .container {
         max-width: 320px;
         padding-left: 15px;
         padding-right: 0;
-    }     */
-    /* .container2 {
+    }    
+    .container2 {
         max-width: 358px;
         flex-direction: column;
         position: relative;
         gap: 31px;
-    } */
-    /* .sale {
+    }
+    .sale {
         margin-bottom: 5px;
-    } */
-/*     
+    }    
     .banner-title {
         padding-bottom: 0px;
-    } */
-    /* .banner-box {
+    }
+    .banner-box {
         background-position: 19% center;
-    }         */
-    /* .header-item {
+    }        
+    .header-item {
         flex-basis: 57%;
-    } */
-    /* .menu-title {        
+    }
+    .menu-title {        
         font-size: 27px;
         line-height: 56px;
         padding: 21px 0;        
-    } */
-/*     
+    }    
     .menu-grid-title {
         font-size: 13px;
         font-weight: 700;
-        padding-top: 11px;
-    } */
-    /* .menu-select {
+        padding-top: 0px;
+    }
+    .menu-select {
         padding: 12px 15px;
         font-size: 12px;
         flex-basis: 274px;
-    } */
-    /* .menu-grid-cover {
+    }
+    .menu-grid-cover {
         width: 139px;
         height: 180px;        
-    } */
-    /* .menu-grid-cover .menu-grid-img {        
+    }
+    .menu-grid-cover .menu-grid-img {        
         height: 180px;
-    } */
-    /* .menu-grid-btn {
+    }
+    .menu-grid-btn {
         padding: 8px 16px;
         margin: 10px auto 0;
-    } */
-    /* .menu-grid {
+    }
+    .menu-grid {
         gap: 25px 12px;
-    } */
-    /* .additionally .menu-grid {
+    }
+    .additionally .menu-grid {
         gap: 50px 3px;
-    } */
-    /* .additionally {
+    }
+    .additionally {
         margin-top: 32px;
         margin-bottom: 0px;
-    } */
-    /* .menu-other {
+    }
+    .menu-other {
         overflow: hidden;
         height: 380px;
-    } */
-    /* .footer {
+    }
+    .footer {
         margin-top: 60px;
         padding-top: 62px;
         padding-bottom: 61px;       
-    } */
-    /* .footer-list {
+    }
+    .footer-list {
         font-family: 'Open Sans', sans-serif;
         padding-bottom: 0;
-    } */
+    }
     
-    /* .footer-item {
+    .footer-item {
         padding: 0;
         margin-top: 0;        
-    } */
-    /* .footer-item h2 {
+    }
+    .footer-item h2 {
         padding-top: 13px;
     }
     .footer-item.footer-item:nth-child(3) h2 {
         padding-top: 0px;
-    } */
-    /* .footer-item .tablet {
+    }
+    .footer-item .tablet {
         display: none;
-    } */
-    /* .footer-tel {
+    }
+    .footer-tel {
         display: block;
         position: absolute;
         right: 15px;
         top: -4px;
-    } */
-    /* .footer-item ul, .footer-tel ul {
+    }
+    .footer-item ul, .footer-tel ul {
         font-weight: 700;
-    } */
-    /* .footer-item h2 {
+    }
+    .footer-item h2 {
     font-size: 18px;    
     margin: 0;    
-    } */
-    /* .footer-list {
+    }
+    .footer-list {
         padding-top: 0;
     }
     .footer-list li {
         font-weight: 400;
-    } */
-    /* .footer-list-tel a {
+    }
+    .footer-list-tel a {
         font-size: 20px;
         font-weight: 800;
         font-family: 'Nunito Sans', sans-serif;
-    } */
-    
-    /* .bg {
+    }    
+    .bg {
         background-image: url(../img/bg-320.jpg);
-        padding: 55px 0px 59px 0px;
-        margin-bottom: 0;
-        
-    } */
-    /* .breadcrumbs {
+        padding: 57px 0;
+        margin-bottom: 0;        
+    }
+    .breadcrumbs {
         font-size: 14px;
         margin-bottom: 0;
-    } */
-/*     
+    }    
     .breadcrumbs a {
         font-size: 14px;
-    } */
-/*     
+    }    
     .title {
         font-size: 38px;
-        padding-top: 27px;
+        padding-top: 18px;
         padding-bottom: 13px;
     }
     .description {        
@@ -1612,9 +1622,8 @@ h1 span {
     }
     .banner-text {
         max-width: 233px;
-        padding-bottom: 17px;        
-    }     */
-/*     
+        padding-bottom: 19px;   
+    }        
     .menu-other .menu-grid-item {
         flex: 0 0 141px;
     }
@@ -1623,18 +1632,18 @@ h1 span {
     }
     .menu-grid-cover-2 {
         height: 180px;
-    }
-    .menu-grid-cover-2 .menu-grid-img {
-        height: 180px;
+        margin-bottom: 13px;
     }
     .menu-grid-price {
         font-size: 16px;
-        padding-bottom: 0;        
+        padding-bottom: 0;   
+        margin-top: 0;
+        margin-bottom: 10px;     
     }
     .menu-header {
         gap: 26px;
-    } */
-
+    }
+}
 @media (max-width: 280px) {
     .container {
         max-width: 280px;
