--- a/style/style.css
+++ b/style/style.css
@@ -465,31 +465,6 @@ header {
 .button-up.visible {
     opacity: 1;
 }
-/* ==== стрелка =========================*/
-.back_to_top {
-    position: fixed;
-    bottom: 80px;
-    right: 40px;    
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    line-height: 30px;
-    font-weight: 700;
-    background: #FBB731;
-    color: #444;    
-    cursor: pointer;
-    border-radius: 2px;
-    display: none;
-    
-}  
-
-.back_to_top:hover {
-    background: #F37335;    
-}  
-
-.back_to_top-show {
-    display: block;
-}
 /* мобильник */
 .mobil {
     display: none;
@@ -512,9 +487,10 @@ header {
 .main2 {    
     background: linear-gradient(180deg, #0C4C7B -100%, #1E2F40 100%);  
 	display: flex;
-    width: 1349px;
+    width: 100%;
     height: 862px;
     position: relative;
+    overflow: hidden;
 }
 
 .visual {
@@ -576,9 +552,9 @@ h1 span {
 }
 
 .main2 img {
-    width: 829px;
+    width: 734px;
     position: absolute;
-    right: -168px;
+    right: -25%;
     
 }
 .promo {
@@ -737,6 +713,15 @@ h1 span {
     .container {
         max-width: 1180px;      
     }   
+    .contents {
+        color: #FAF9F9;
+        flex: 0 0 580px;
+        padding: 170px 20px;
+    }
+    .main2 img {
+        width: 63vw;
+    }
+
 }
 
 @media (min-width: 1001px) {
@@ -996,7 +981,7 @@ h1 span {
         padding-bottom: 67px;
     }
 }
-@media (max-width: 567px) {
+@media (max-width: 570px) {
     /* главная */
     .header {
         padding-top: 19px;
