--- a/style/style.css
+++ b/style/style.css
@@ -465,6 +465,7 @@ header {
 .button-up.visible {
     opacity: 1;
 }
+
 /* мобильник */
 .mobil {
     display: none;
@@ -709,6 +710,65 @@ h1 span {
     top: 20px;
     right: 20px;
 }
+
+
+._modal {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: all .2s;
+    transition: all .2s;
+    /* pointer-events: none; */
+  }
+  
+  .modal-bg {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 20px;
+  }
+  
+  .modal-body {
+    padding: 24px;
+    background-color: #fff;
+    width: 700px;
+    margin: auto;
+    max-height: 90%;
+    overflow: auto;
+    border-radius: 16px;
+    position: relative;
+  }
+  
+  .modal-close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    border: none;
+  }
+  .modal-close:before, .modal-close:after {
+    content: ""; 
+    position: absolute; 
+    width: 24px; height: 2px; 
+    background: black;
+    right: 0;}
+  .modal-close:before {transform: rotate(45deg);}
+  .modal-close:after {transform: rotate(-45deg);}
+  #cart-empty {
+    border-top: 1px solid  #1e2f40;
+    border-bottom: 1px solid #1e2f40;
+    padding: 15px;
+    margin-top: 10px;
+    text-align: center;
+  }
 /*==== responsive @media (min-width: 1349px) {} ================================================= */
 @media (max-width:1366px) {
     .container {
@@ -1155,6 +1215,10 @@ h1 span {
     .button-up.visible {
         opacity: 0;
     }
+}
+.visibility {
+    opacity: 1;
+    visibility: visible;
 }
 @media (max-width: 519px) {
 .bg {
